# HaskellExperiments

./: Experiments.cabal  LICENSE  stack.yaml
app/: Main.hs
src/: AlphaBeta.hs  Arithmetic.hs  Arithmetic2.hs  BinarySearch.hs  BulkSave.hs  Catamorphism.hs  CatamorphismTutorial.hs  Color.hs  Coroutine.hs  DepTypes.hs  FiboIter.hs  FiboRecur.hs  Fibonacci.hs  FizzBuzz.hs  FoldMergeSort.hs  ForkJoin.hs  FreeMonad.hs  Lenses.hs  Money.hs  Money2.hs  MoneyCata.hs  NP.hs  PBTExamples.hs  RMQ.hs  RMQ2.hs  Range.hs  RapidCheck.hs  Shape.hs  SocialMedia.hs  SocialMediaImperative.hs  SocialMediaInMemory.hs  SocialMediaRemote1.hs  SocialMediaRemote2.hs  TLCQ.hs  TrainingL.hs  Tree.hs  Writer.hs  WriterT.hs
