name:                Experiments
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Experiments#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Catamorphism
                     , FoldMergeSort
                     , Lib
                     , Range
                     , RMQ
                     , RMQ2
                     , Tree
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , mtl >= 2.2 && < 2.3
                     , vector >= 0.11 && < 0.12
  default-language:    Haskell2010

executable Experiments-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Experiments
                     , criterion >= 1.1 && < 1.2
  default-language:    Haskell2010

test-suite Experiments-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Experiments
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Experiments
