name:                Experiments
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/QuentinDuval/HaskellExperiments#readme
license:             BSD3
license-file:        LICENSE
author:              Quentin Duval
maintainer:          example@example.com
copyright:           2016 Quentin Duval
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AlphaBeta
                     , Arithmetic
                     , Arithmetic2
                     , Catamorphism
                     , FiboIter
                     , FiboRecur
                     , FizzBuzz
                     , FoldMergeSort
                     , FreeMonad
                     , Lenses
                     , Money
                     , Money2
                     , MoneyCata
                     , Range
                     , RapidCheck
                     , RMQ
                     , RMQ2
                     , TrainingL
                     , Tree
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.7.1
                     , data-fix >= 0.0.4
                     , lens >= 4.14 && < 4.16
                     , mtl >= 2.2 && < 2.3
                     , random >= 1.1 && < 1.2
                     , QuickCheck >= 2.8.2
                     , text >= 1.2.2.1
                     , vector >= 0.11 && < 0.12
  default-language:    Haskell2010

executable Experiments-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Experiments
                     , criterion >= 1.1 && < 1.2
  default-language:    Haskell2010

test-suite Experiments-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Experiments
                     , QuickCheck >= 2.8.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/QuentinDuval/HaskellExperiments
